tests/snapshots/custom_menus/fmSyntaxColorizer/FileMaker Pro Menu - ID 1.xml.snap
---
source: src/main.rs
expression: output_content
---
<CustomMenu name="FileMaker Pro Menu" id="1">
	<UUID modifications="9" userName="R.Watson" accountName="admin" timestamp="2020-11-06T10:20:11">A95A2F1E-6B8D-49F9-8AEC-BDCD3511CA7D</UUID>
	<MenuItemList membercount="3">
		<CustomMenuItem isSubMenuItem="False" isSeparatorItem="False">
			<Conditions>
				<Install>
					<Calculation><![CDATA[Wenn( Abs(Hole( SystemPlattform )) <> 2; 1; 0 )]]></Calculation>
					<ChunkList hash="01C6781B42D4754C2062258B9306BDF5">
						<Chunk type="FunctionRef">Wenn</Chunk>
						<Chunk type="NoRef">( </Chunk>
						<Chunk type="FunctionRef">Abs</Chunk>
						<Chunk type="NoRef">(</Chunk>
						<Chunk type="FunctionRef">Hole</Chunk>
						<Chunk type="NoRef">( </Chunk>
						<Chunk type="FunctionRef">SystemPlattform</Chunk>
						<Chunk type="NoRef"> )) &lt;&gt; 2; 1; 0 )</Chunk>
					</ChunkList>
				</Install>
			</Conditions>
			<Name>
				<Calculation><![CDATA["About fmSyntaxColorizer..."]]></Calculation>
				<ChunkList hash="19248D17347D054BF5B52565B7DF271C">
					<Chunk type="NoRef">&quot;About fmSyntaxColorizer...&quot;</Chunk>
				</ChunkList>
			</Name>
			<Command id="0"></Command>
			<Override name="True" action="True" Shortcut="False"></Override>
			<Step enable="True" id="1" name="Script ausführen">
				<StepText>Script ausführen [ “About this Application…” ]</StepText>
				<CurrentScript value="Pause"></CurrentScript>
				<ScriptReference id="72" name="About this Application…"></ScriptReference>
			</Step>
		</CustomMenuItem>
		<CustomMenuItem isSubMenuItem="False" isSeparatorItem="False">
			<Conditions>
				<Install>
					<Calculation><![CDATA[1]]></Calculation>
					<ChunkList hash="A93F17BC54CA1958073B692697D5ED21">
						<Chunk type="NoRef">1</Chunk>
					</ChunkList>
				</Install>
			</Conditions>
			<Command name="Über FileMaker Pro..." id="57664"></Command>
			<Override name="False" action="False" Shortcut="False"></Override>
		</CustomMenuItem>
		<CustomMenuItem isSubMenuItem="False" isSeparatorItem="True">
			<Conditions>
				<Install>
					<Calculation><![CDATA[Wenn( Abs(Hole( SystemPlattform )) <> 2; 1; 0 )]]></Calculation>
					<ChunkList hash="01C6781B42D4754C2062258B9306BDF5">
						<Chunk type="FunctionRef">Wenn</Chunk>
						<Chunk type="NoRef">( </Chunk>
						<Chunk type="FunctionRef">Abs</Chunk>
						<Chunk type="NoRef">(</Chunk>
						<Chunk type="FunctionRef">Hole</Chunk>
						<Chunk type="NoRef">( </Chunk>
						<Chunk type="FunctionRef">SystemPlattform</Chunk>
						<Chunk type="NoRef"> )) &lt;&gt; 2; 1; 0 )</Chunk>
					</ChunkList>
				</Install>
			</Conditions>
			<Override name="False" action="False" Shortcut="False"></Override>
		</CustomMenuItem>
	</MenuItemList>
	<Conditions>
		<Install>
			<Calculation><![CDATA[Wenn( Abs(Hole( SystemPlattform )) <> 2; 1; 0 )]]></Calculation>
			<ChunkList hash="01C6781B42D4754C2062258B9306BDF5">
				<Chunk type="FunctionRef">Wenn</Chunk>
				<Chunk type="NoRef">( </Chunk>
				<Chunk type="FunctionRef">Abs</Chunk>
				<Chunk type="NoRef">(</Chunk>
				<Chunk type="FunctionRef">Hole</Chunk>
				<Chunk type="NoRef">( </Chunk>
				<Chunk type="FunctionRef">SystemPlattform</Chunk>
				<Chunk type="NoRef"> )) &lt;&gt; 2; 1; 0 )</Chunk>
			</ChunkList>
		</Install>
	</Conditions>
	<Comment></Comment>
	<Base name="FileMaker Pro" value="1"></Base>
	<Options browseMode="True" findMode="True" previewMode="True"></Options>
</CustomMenu>
