tests/snapshots/custom_menus/fmSyntaxColorizer/[Gehe zu Layout] - ID 15.xml.snap
---
source: src/main.rs
expression: output_content
---
<CustomMenu name="[Gehe zu Layout]" id="15">
	<UUID modifications="2" userName="R.Watson" accountName="admin" timestamp="2020-08-04T09:52:12">B2EFB790-CA18-496C-B5E6-7B6017FEA1BF</UUID>
	<MenuItemList membercount="0"></MenuItemList>
	<Conditions>
		<Install>
			<Calculation><![CDATA[1]]></Calculation>
			<ChunkList hash="A93F17BC54CA1958073B692697D5ED21">
				<Chunk type="NoRef">1</Chunk>
			</ChunkList>
		</Install>
	</Conditions>
	<Comment></Comment>
	<Base name="Gehe zu Layout" value="161"></Base>
	<Options browseMode="True" findMode="True" previewMode="True"></Options>
</CustomMenu>
