tests/snapshots/custom_menus/fmSyntaxColorizer/[Größe] - ID 26.xml.snap
---
source: src/main.rs
expression: output_content
---
<CustomMenu name="[Größe]" id="26">
	<UUID modifications="2" userName="R.Watson" accountName="admin" timestamp="2020-08-04T09:52:12">7C58FF13-E486-4C60-ABEC-8E211E446962</UUID>
	<MenuItemList membercount="0"></MenuItemList>
	<Conditions>
		<Install>
			<Calculation><![CDATA[1]]></Calculation>
			<ChunkList hash="A93F17BC54CA1958073B692697D5ED21">
				<Chunk type="NoRef">1</Chunk>
			</ChunkList>
		</Install>
	</Conditions>
	<Comment></Comment>
	<Base name="Größe" value="20"></Base>
	<Options browseMode="True" findMode="True" previewMode="True"></Options>
</CustomMenu>
