tests/snapshots/custom_menus/fmSyntaxColorizer/[Produktdokumentation] - ID 31.xml.snap
---
source: src/main.rs
expression: output_content
---
<CustomMenu name="[Produktdokumentation]" id="31">
	<UUID modifications="2" userName="R.Watson" accountName="admin" timestamp="2020-08-04T09:52:12">1FBD3F09-0B4B-419B-B12D-C32E1D84AE5B</UUID>
	<MenuItemList membercount="0"></MenuItemList>
	<Conditions>
		<Install>
			<Calculation><![CDATA[1]]></Calculation>
			<ChunkList hash="A93F17BC54CA1958073B692697D5ED21">
				<Chunk type="NoRef">1</Chunk>
			</ChunkList>
		</Install>
	</Conditions>
	<Comment></Comment>
	<Base name="Produktdokumentation" value="198"></Base>
	<Options browseMode="True" findMode="True" previewMode="True"></Options>
</CustomMenu>
