tests/snapshots/custom_menus/fmSyntaxColorizer/[Suchen_Ersetzen] - ID 18.xml.snap
---
source: src/main.rs
expression: output_content
---
<CustomMenu name="[Suchen/Ersetzen]" id="18">
	<UUID modifications="2" userName="R.Watson" accountName="admin" timestamp="2020-08-04T09:52:12">AB444989-0FAF-493B-8348-4D345CB64F81</UUID>
	<MenuItemList membercount="0"></MenuItemList>
	<Conditions>
		<Install>
			<Calculation><![CDATA[1]]></Calculation>
			<ChunkList hash="A93F17BC54CA1958073B692697D5ED21">
				<Chunk type="NoRef">1</Chunk>
			</ChunkList>
		</Install>
	</Conditions>
	<Comment></Comment>
	<Base name="Suchen/Ersetzen" value="149"></Base>
	<Options browseMode="True" findMode="True" previewMode="True"></Options>
</CustomMenu>
